Fix overhang of collapsed button for additional actions

--- a/website/static/css/pages/project-page.css
+++ b/website/static/css/pages/project-page.css
@@ -250,11 +250,12 @@ li.addon-categories a{
 }
 
 #other-actions-panel {
+    margin-top: 35px;
+    margin-right: 15px;
     color: #333;
     background-color: #f5f5f5;
     border-color: #ddd;
     padding: 5px 10px;
-    margin-top: 1px;
     position: absolute;
     right: -15px;
     z-index: 2;
